--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h2, h3 {
 .nav {
   position: fixed;
   top: 0;
+  height: 80px;
   width: 100%;
   background: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(8px);
@@ -45,6 +46,13 @@ h2, h3 {
   padding: 1.25rem 2rem;
   z-index: 1000;
   color: white;
+}
+
+.logo img {
+  height: 50px;
+  width: auto;
+  display: block;
+  margin-top: 2px;
 }
 
 .nav-links {
